@@ -1,9 +1,12 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.587 2006/02/07 02:05:38 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.588 2006/02/08 19:58:44 codeman Exp $
 
 *GLI-0.3 (27 Oct 2005)
+
+  8 Feb 2006; Preston Cody <codeman@gentoo.org>
+  added more packages to extra_packages list in IP
 
   6 Feb 2006; Andrew Gaffney <agaffney@gentoo.org>
   src/templates/x86ArchitectureTemplate.py:
